--- a/package.json
+++ b/package.json
@@ -21,14 +21,11 @@
   "homepage": "https://github.com/klowe45/se_project_express#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.6.1",
-    "validator": "^13.12.0",
-    "winston": "^3.17.0"
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
